[gd_scene load_steps=5 format=3 uid="uid://cc11767o2k2al"]

[ext_resource type="Script" path="res://Scripts/Mark.gd" id="1_384f4"]
[ext_resource type="Texture2D" uid="uid://daxrdkr0cu5jv" path="res://Assets/Textures/cross-mark-1.png" id="1_rqvfc"]
[ext_resource type="Texture2D" uid="uid://bq8coo64vb2ex" path="res://Models/Grid/Grid_slot.png" id="3_t5v05"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vdics"]
size = Vector2(397.818, 410.182)

[node name="Mark" type="Node2D"]
scale = Vector2(0.34375, 0.34375)
script = ExtResource("1_384f4")

[node name="mark" type="Sprite2D" parent="."]
visible = false
rotation = 6.55201
texture = ExtResource("1_rqvfc")

[node name="Area2D" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-10.5455, 0)
shape = SubResource("RectangleShape2D_vdics")

[node name="Grid" type="Sprite2D" parent="."]
visible = false
position = Vector2(-11.6364, -2.90909)
scale = Vector2(6, 6)
texture = ExtResource("3_t5v05")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
